--- a/editor.html
+++ b/editor.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Rich Text Editor</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+
     <script type="text/javascript">
     var oDoc, sDefTxt;
 
