--- a/editor.html
+++ b/editor.html
@@ -4,7 +4,11 @@
 <head>
     <title>Rich Text Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-
+    <style>
+        :focus {
+            background-color: yellow;
+        }
+    </style>
     <script type="text/javascript">
     var oDoc, sDefTxt;
 
