--- a/scroll.html
+++ b/scroll.html
@@ -7,6 +7,8 @@
   <style type="text/css">
     #wrapper {
       width: 100%;
+      height: 500px;
+      overflow: auto;
       background-color: blue;
     }
 
