--- a/editor.html
+++ b/editor.html
@@ -17,6 +17,8 @@
 </head>
 <body>
 <div id="app">
+    <div style="position: fixed; top: 0; left: 0; right: 0; height: 100px; background-color: red"></div>
+
     <p>
         <button type="button" @click="focus">focus</button>
         <button type="button" @click="fullScreen">full screen</button>
