--- a/editor.html
+++ b/editor.html
@@ -29,6 +29,9 @@
 
     <vue-html5-editor :content="content" :height="300" :show-module-name="showModuleName"
                       @change="updateData" ref="editor"></vue-html5-editor>
+    
+       <div style="width: 100%; height: 500px; background-color: black"></div>
+
 </div>
 
 <script>
