--- a/input.html
+++ b/input.html
@@ -14,6 +14,11 @@
 <div> 输入文字</div>
 
 <div> 输入文字</div>
+  <div contenteditable="true">编辑区</div>
+  <div> 输入文字</div>
+<div> 输入文字</div>
+
+<div> 输入文字</div>
 <div> <input type="text"/></div>
 
 <!-- Include the Quill library -->
